--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -4,24 +4,100 @@ body #footer {
 }
 body #header .top,
 body #search-form,
-body #calendar-block {
+body #calendar-block,
+body #header .header-overlay,
+body #nav {
     display: none;
 }
-body #bg-block {
-    height: 220px;
+body #header {
+    height: 83px;
+    z-index: 11;
+}
+body #header-left {
+    float: none;
+}
+body #logo {
+    background-size: 60px;
+    margin: 0 auto;
+    height: 65px;
+    width: 60px;
+}
+body #nav {
     margin-top: 0;
+    position: absolute;
+    left: 0;
+    top: 83px;
+    text-align: center;
+    width: 100%;
+    z-index: 11;
+}
+body #nav li {
+    background-color: #F1F1F2;
+    border-bottom: 1px solid #cccccc;
+    display: block;
+    height: auto;
+    min-height: 47px;
+    line-height: 47px;
+    padding-left: 0 !important;
+}
+body #nav li.first {
+    border-top: 1px solid #cccccc;
+}
+body #nav li a {
+    color: #58595B;
+    display: block;
+    height: 100%;
+}
+body #acc-sub-menu {
+    position: static;
+}
+body #nav #acc-sub-menu li {
+    border: none;
+}
+body #nav #acc-sub-menu li a {
+    background: none;
+    padding: 0;
+    text-align: center;
+}
+body #bg-block {
+    height: 300px;
+    margin-top: 0;
+    padding-top: 0;
+    text-align: center;
+}
+body #bg-block .bg-overlay {
+    background: url('../images/overlay.png');
+    height: 10px;
+}
+body #bg-block .booking {
+    display: inline-block;
+    padding-top: 100px;
+    margin-bottom: 85px;
+}
+body #bg-block .booking div {
+    background: url('../images/overlay.png');
+    padding: 7px;
+}
+body #bg-block .booking a {
+    background-color: #D2AB67;
+    border: none;
+    color: #ffffff;
+    font-size: 0.9em;
 }
 body #bg-block h1 {
     font-size: 1.6em;
+    margin-top: 0;
+    padding-right: 0;
 }
 body #header .white {
-    height: 90px;
+    height: 74px;
+    padding-top: 9px;
 }
 body #header .white-inner {
     padding: 0;
 }
 body .title {
-    font-size: 1.2em;
+    font-size: 1.1em;
 }
 body .homepage-section {
     margin-bottom: 0;
@@ -33,6 +109,12 @@ body #homepage-accommodation {
 body #homepage-accommodation,
 body #homepage-offers {
     margin-bottom: 25px;
+}
+body #homepage-accommodation {
+    padding: 25px 0 30px;
+}
+body #homepage-accommodation h2 {
+    margin-bottom: 20px;
 }
 body #contact {
     padding: 20px 0;
@@ -63,4 +145,134 @@ body #contact-form-block {
 }
 body #homepage-offers .text-section {
     padding-right: 0;
+}
+/* burger */
+#burger {
+    cursor: pointer;
+    height: 22px;
+    padding: 13px;
+    position: absolute;
+    top: 17px;
+    right: 0;
+    width: 34px;
+    z-index: 999;
+}
+#burger span {
+    background-color: #C2852A;
+    border-radius: 2px;
+    height: 4px;
+    position: absolute;
+    left: 13px;
+    width: 34px;
+    transition: all 0.5s ease;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+}
+#burger .burger1 {
+    top: 13px;
+}
+#burger .burger2 {
+    top: 22px;
+}
+#burger .burger3 {
+    top: 31px;
+}
+#burger.open .burger1 {
+    top: 23px;
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+}
+#burger.open .burger2 {
+    opacity: 0;
+}
+#burger.open .burger3 {
+    top: 23px;
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+}
+/* lng-switcher */
+#m-lng-switcher {
+    border: 2px solid #D7B477;
+    position: absolute;
+    left: 15px;
+    top: 27px;
+    text-align: center;
+    width: 70px;
+    z-index: 5;
+}
+#m-lng-switcher .top-switcher {
+    background: url('../images/arrow-down.png') no-repeat 54px center;
+    color: #D7B477;
+    height: 25px;
+    line-height: 25px;
+}
+#m-lng-switcher .bottom-switcher {
+    background-color: #ffffff;
+}
+#m-lng-switcher .bottom-switcher a {
+    color: #D7B477;
+    display: block;
+    height: 25px;
+    line-height: 25px;
+}
+
+body #home-acc-block {
+    padding: 0 25px;
+}
+body #home-acc .acc-item {
+    height: 180px;
+    width: 100%;
+}
+body #home-acc .acc-title {
+    font-size: 1.2em;
+    height: 40px;
+    line-height: 40px;
+    margin-top: 69px;
+    min-width: 120px;
+    padding: 0 7px;
+}
+body #home-acc .owl-buttons div {
+    top: 71px;
+}
+body #home-acc .owl-buttons .owl-prev {
+    left: -25px;
+}
+body #home-acc .owl-buttons .owl-next {
+    right: -25px;
+}
+
+body #page-title {
+    border-top: 7px solid #D2AB67;
+    height: 35px;
+    margin-top: -42px;
+}
+body #page-title h1 {
+    height: 35px;
+    line-height: 35px;
+}
+body #about-content {
+    padding: 20px 10px 25px;
+    margin-bottom: 25px;
+}
+body #guests-block {
+    margin-bottom: 30px;
+}
+body #guests-block h2,
+body #partners h2,
+body #vacancies h2 {
+    font-size: 1.1em;
+    margin-bottom: 25px;
+    padding-left: 0;
+    text-align: center;
+}
+body #partners {
+    padding: 25px 0 0;
 }
